@@ -1,11 +1,11 @@
 import QtQuick 2.0
 ListModel {
     ListElement { title: "<b>Maintainers:</b>"}
-    ListElement { title: "mike7b4 <mike@7b4.se>"; titleurl: "Mikael Hermansson"; url: "mailto:mike@7b4.se?subject=" }
+    ListElement { title: "mike7b4 <mike@7b4.se>"; titleurl: "mike7b4 (head)"; url: "mailto:mike@7b4.se?subject=" }
+    ListElement { title: "Lechindianer (German translation)"}
 //    ListElement { title: "<u>Thanks to:</u>"}
+
     ListElement { title: "<b>Credits to:</b>" }
     ListElement { title: "Jolla for the cool SailfishOS"}
-    ListElement { title: "Jolla community"}
-    ListElement { title: "Nemo community"}
-    ListElement { title: "Qt community"}
+    ListElement { title: "Jolla, Nemo and Qt community"}
 }
